Change the API and the db schema
